Fix missing bg on iOS

--- a/source/assets/stylesheets/application.css.scss
+++ b/source/assets/stylesheets/application.css.scss
@@ -1,9 +1,13 @@
 html, body {
   position: fixed;
   overflow: hidden;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
-body {
+#container {
   background: #f3cc8f no-repeat center center fixed; 
   background-size: cover;
   font-family: "Helvatica", "Arial", sans-serif;
@@ -14,13 +18,11 @@ body {
   text-shadow: 0 0 20px black;
   height: 100%;
   width: 100%;
-  padding: 0;
-  margin: 0;
+}
 
-  #container {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+#center {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
 }
